EVI-852: Support whitelabeling, upgrade build tools to support custom templates (#858)
* EVI-852: Creates basic ability to whitelabel title and favicon

* Remove legacy build tooling

* Working Webpack 4 build

* Serve up a basic Curator powered by Webpack 4

* Cleanup

* Whilelabeling ish

* Adds an dev server based on the Express server with proxying

* Add depenedcies to make Jest tests pass

* Update scripts and docs to use new commands

* Support better hot reloading

* Filter out unused plugins

* Checkpoint

* Checkpoint

* Fix linting problems

--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,11 @@
     "zvVersion": true,
     "emailjs": true
   },
+  "settings": {
+    "react": {
+      "version": "15.0"
+    }
+  },
   "rules": {
     "standard/computed-property-even-spacing": "off",
     "no-unused-vars": [
@@ -57,6 +62,11 @@
         "ignoreRestSiblings": false
       }
     ],
+    "prefer-promise-reject-errors": "warn",
+    "no-use-before-define": "warn",
+    "react/no-unescaped-entities": "warn",
+    "react/no-deprecated": "warn",
+    "react/no-string-refs": "warn",
     "prettier/prettier": "error"
   }
 }
