--- a/package.json
+++ b/package.json
@@ -6,23 +6,22 @@
     "type": "git",
     "url": "https://github.com/Zorroa/zorroa-js-curator.git"
   },
+  "standard": {
+    "parser": "babel-eslint"
+  },
   "scripts": {
     "prepush": "npm test",
     "start": "$(npm bin)/forever -f ./server/app.js",
-    "start:docker": "docker run -p 80:8081 -p 443:8443 -e 'NODE_ENV=production' -e WHITELABEL_CONFIGURATION -e ARCHIVIST_API_URL --init -u node -m 1g --memory-swap 4g zorroa-js-curator",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback",
-    "dev-https": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback --https --cert ./cert.pem --key ./key.pem # this is for safari testing",
-    "dev-https-cert": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 365 -nodes -subj '/CN=localhost'",
-    "build-dev": "./node_modules/.bin/webpack --config ./build/webpack.dev.js --progress --colors",
+    "start:docker": "docker run -p 80:8081 -p 443:8443 -e 'NODE_ENV=production' -e WHITELABEL_CONFIGURATION -e ARCHIVIST_API_URL -e 'CURATOR_PORT_SECURE=8443' --init -u node -m 1g --memory-swap 4g zorroa-js-curator",
+    "start:dev": "CURATOR_PORT_SECURE=8443 CURATOR_PORT=8081 NODE_ENV=development ARCHIVIST_API_URL='https://qa.pool.zorroa.com' node ./server/app.js",
     "deploy": "docker build -m 4g -t zorroa-js-curator .",
-    "build-prodlocal": "./node_modules/.bin/webpack --config ./build/webpack.prodlocal.js --progress --colors",
-    "build-docker": "./node_modules/.bin/webpack --config ./build/webpack.docker.js --progress --colors",
-    "build": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --verbose",
+    "build": "npx webpack --config build/webpack.config.js --progress --colors",
+    "build:docker": "npx webpack --config build/webpack.config.js",
+    "build:https-cert": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 365 -nodes -subj '/CN=localhost'",
     "test": "npm run test:lint && npm run test:unit",
     "test:watch": "$(npm bin)/jest src/**/*.test.js --verbose --watch",
     "test:lint": "$(npm bin)/eslint ./",
     "test:unit": "$(npm bin)/jest",
-    "purge": "rm -rf node_modules; npm cache clean; npm install",
     "update-fonts": "src/assets/fonts/zorroa-icons/update-fonts.bash",
     "preview-fonts": "src/assets/fonts/zorroa-icons/preview-fonts.bash"
   },
@@ -57,53 +56,50 @@
     "arrowParens": "avoid"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-1": "^7.0.0",
     "axios-mock-adapter": "1.9.0",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "^23.0.0",
-    "babel-loader": "6.4.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
-    "babel-register": "6.26.0",
-    "css-loader": "0.25.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
     "enzyme": "3.4.0",
     "enzyme-adapter-react-15": "1.0.6",
-    "eslint": "3.19.0",
+    "eslint": "^5.5.0",
     "eslint-config-prettier": "2.9.0",
-    "eslint-config-standard": "6.2.1",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "2.5.0",
     "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-react": "6.10.3",
-    "eslint-plugin-standard": "2.3.1",
-    "file-loader": "0.9.0",
-    "handlebars-webpack-plugin": "0.1.1",
-    "html-loader": "0.4.5",
-    "html-webpack-plugin": "2.30.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^2.0.0",
     "husky": "0.14.3",
     "install": "0.11.0",
     "jest-cli": "^23.0.0",
     "jest-localstorage-mock": "2.2.0",
     "json": "9.0.6",
-    "json-loader": "0.5.7",
-    "less": "2.7.2",
-    "less-loader": "2.2.3",
-    "node-sass": "3.13.1",
+    "json-loader": "^0.5.7",
+    "node-sass": "^4.9.3",
     "pdfjs-dist": "1.10.97",
     "prettier": "1.10.2",
-    "raw-loader": "0.5.1",
     "react-test-renderer": "15.6.2",
     "redux-mock-store": "1.5.3",
-    "sass-loader": "4.1.1",
-    "style-loader": "0.13.2",
-    "webpack": "1.15.0",
-    "webpack-dev-server": "1.16.5"
+    "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.3.0"
   },
   "dependencies": {
     "axios": "0.14.0",
