--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-  "presets": ["env", "react", "stage-1"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins":[
-    "transform-class-properties",
-    "transform-decorators-legacy",
-    "transform-es2015-modules-commonjs"
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }],
+    "@babel/plugin-transform-modules-commonjs"
   ]
 }
