--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "redux": "3.7.2",
     "redux-multi": "0.1.12",
     "redux-promise": "0.5.3",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "url-parse": "^1.4.3"
   }
 }
