--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,14 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins":[
+    '@babel/plugin-syntax-dynamic-import',
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose" : true }],
     "@babel/plugin-transform-modules-commonjs"
-  ]
+  ],
+  env: {
+    "test": {
+      plugins: ['babel-plugin-dynamic-import-node']
+    }
+  }
 }
