Op/evi 846: show error and log user out with expired session (#865)
* creates client wrapper

* creates client wrapper

* comments out unused import

* removes console logs

* removes console log

* deleted client wrapper

* removes console log

* removes client wrapper

* updates error meesage

* adds interval who request

* takes children

* removes setInterval

* building session check action

* adds session prop

* implements checkSession()

* renders modal when session expires

* adds session prop and action

* add deprecation warning

* allows rendering of children with minimum array length of one

* adds signin route for reusability

* removes unused class

* adds isFullSize modifier class

* changes prop name

* adds ability to add classnames to ModalOverlay and ssoLogout components

* adds ability to disable onUnderlayClick

* changes component name for reusability

* changes component name to reflect reusability

* adds modal container class modifier

* makes timedLogout and modal visually compatible

* prevents timedLogout from rendering on signin page

* prevents timedLogout from rendering on sso/loggedout path

* abstracts error handling in callback for testability

* updated dependencies

* tests session expiration check

* rids of unnecessary axios instantiation

* moves session action to authAction

* moves sessionReducer to authReducer

* removes unused import

* updates ModalOverlay closeable behavior

* keeps only console.warn

* prevents ModalOverlayHeader from being rendered as child of ModalOverlay__main

* updates CSS for container modifier

* removes unused prop

* reinstates narrow prop

* updates CSS class with modifiers

* removes check for null on onClose

* refactors to check for session only after user has been authenticated

* adds size prop

* removes log

* fixes typo in prop validation

* adds modifier class

* updates props

* re

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepush": "npm run test:lint && npm run test:unit",
     "start": "npx forever -f ./server/app.js",
     "start:docker": "docker run -p 80:8081 -p 443:8443 -e 'NODE_ENV=production' -e WHITELABEL_CONFIGURATION -e ARCHIVIST_API_URL -e 'CURATOR_PORT_SECURE=8443' --init -u node -m 1g --memory-swap 4g zorroa-js-curator",
-    "start:dev": "CURATOR_PORT_SECURE=443 CURATOR_PORT=80 NODE_ENV=development ARCHIVIST_API_URL='https://qa.pool.zorroa.com' node ./server/app.js",
+    "start:dev": "CURATOR_PORT_SECURE=8443 CURATOR_PORT=8081 NODE_ENV=development ARCHIVIST_API_URL='https://qa.pool.zorroa.com' node ./server/app.js",
     "deploy": "docker build -m 4g -t zorroa-js-curator .",
     "build": "npx webpack --config build/webpack.config.js --progress --colors",
     "build:docker": "npx webpack --config build/webpack.config.js",
@@ -56,9 +56,9 @@
     "arrowParens": "avoid"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
@@ -74,7 +74,7 @@
     "css-loader": "^1.0.0",
     "enzyme": "3.4.0",
     "enzyme-adapter-react-15": "1.0.6",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "1.9.0",
@@ -87,7 +87,7 @@
     "file-loader": "^2.0.0",
     "husky": "0.14.3",
     "install": "0.11.0",
-    "jest-cli": "^23.0.0",
+    "jest-cli": "^23.6.0",
     "jest-localstorage-mock": "2.2.0",
     "json": "9.0.6",
     "json-loader": "^0.5.7",
@@ -99,7 +99,7 @@
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "webpack": "^4.17.2",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0"
   },
