--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/zorroa-frontend-library.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack",
   },
   "keywords": [],
   "author": "",
@@ -14,17 +15,16 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "node-sass": "^4.9.3",
+    "react": "^15.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
-  "dependencies": {
-    "react": "^15.6.2",
-    "classnames": "^2.2.6"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=15.6.0 <17"
   }
