--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/zorroa-frontend-library.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack",
+    "build": "npx webpack"
   },
   "keywords": [],
   "author": "",
