--- a/package.json
+++ b/package.json
@@ -12,19 +12,36 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
+    "enzyme": "3.4.0",
+    "enzyme-adapter-react-15": "1.0.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-cli": "^23.6.0",
     "node-sass": "^4.9.3",
     "react": "^15.6.2",
+    "react-dom": "15.6.2",
+    "react-test-renderer": "15.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {},
+  "jest": {
+    "testURL": "https://localhost/8081",
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "collectCoverage": true
+  },
   "peerDependencies": {
     "react": ">=15.6.0 <17"
   }
