--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/zorroa-frontend-library.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack"
+    "build": "npx webpack",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "author": "",
@@ -22,16 +24,21 @@
     "css-loader": "^1.0.0",
     "enzyme": "3.4.0",
     "enzyme-adapter-react-15": "1.0.6",
+    "enzyme-adapter-react-16": "^1.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^23.6.0",
     "node-sass": "^4.9.3",
-    "react": "^15.6.2",
-    "react-dom": "15.6.2",
-    "react-test-renderer": "15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "@storybook/react": "^4.0.0-rc.2",
+    "@storybook/addon-actions": "^4.0.0-rc.2",
+    "@storybook/addon-links": "^4.0.0-rc.2",
+    "@storybook/addons": "^4.0.0-rc.2"
   },
   "dependencies": {},
   "jest": {
