--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^4.0.0-rc.2",
+    "@storybook/addon-info": "^3.4.11",
+    "@storybook/addon-links": "^4.0.0-rc.2",
+    "@storybook/addons": "^4.0.0-rc.2",
+    "@storybook/react": "^4.0.0-rc.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
@@ -32,13 +37,10 @@
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
     "sass-loader": "^7.1.0",
+    "story2sketch": "^1.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "@storybook/react": "^4.0.0-rc.2",
-    "@storybook/addon-actions": "^4.0.0-rc.2",
-    "@storybook/addon-links": "^4.0.0-rc.2",
-    "@storybook/addons": "^4.0.0-rc.2"
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {},
   "jest": {
