--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-links": "^4.0.0-rc.2",
     "@storybook/addons": "^4.0.0-rc.2",
     "@storybook/react": "^4.0.0-rc.2",
+    "@storybook/storybook-deployer": "^2.3.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
