--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
+    "nodegit": "^0.23.0-alpha.1",
     "sass-loader": "^7.1.0",
     "story2sketch": "^1.3.1",
     "style-loader": "^0.23.1",
