--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
+    "commander": "^2.19.0",
     "css-loader": "^1.0.0",
     "enzyme": "3.4.0",
     "enzyme-adapter-react-15": "1.0.6",
@@ -34,10 +35,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^23.6.0",
     "node-sass": "^4.9.3",
+    "nodegit": "^0.23.0-alpha.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
-    "nodegit": "^0.23.0-alpha.1",
     "sass-loader": "^7.1.0",
     "story2sketch": "^1.3.1",
     "style-loader": "^0.23.1",
