--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "zorroa-js-frontend-library",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/zorroa-frontend-library.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepush": "npm run test:lint && npm run test:unit",
     "build": "npx webpack",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build:storybook": "build-storybook",
+    "deploy": "node tools/release.js",
+    "start": "start-storybook -p 6006",
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "npx eslint ./",
+    "test:unit": "npx jest"
   },
   "keywords": [],
   "author": "Zorroa Corp.",
@@ -24,24 +28,47 @@
     "@storybook/react": "^4.0.0-rc.2",
     "@storybook/storybook-deployer": "^2.3.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
+    "commander": "^2.19.0",
     "css-loader": "^1.0.0",
     "enzyme": "3.4.0",
-    "enzyme-adapter-react-15": "1.0.6",
     "enzyme-adapter-react-16": "^1.6.0",
+    "eslint": "^5.6.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "2.5.0",
+    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^23.6.0",
     "node-sass": "^4.9.3",
+    "prettier": "1.10.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
     "sass-loader": "^7.1.0",
-    "story2sketch": "^1.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "arrowParens": "avoid"
   },
   "dependencies": {},
   "jest": {
