Integrate feedback from Amber in Button designs (#4)
* Attempt to make button's match Amber's requests

* Document white label support

* Fix linting issues

* Error buttons should have a special color

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .idea
 .DS_Store
 
+storybook-static.zip
 storybook-static
 node_modules
 node_cache
@@ -11,3 +12,4 @@ coverage
 cert.pem
 key.pem
 dist
+.cache
